flux/apps/arr/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: default
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0
          resources:
            requests:
              cpu: 33m
              memory: 231Mi
            limits:
              # memory: 231Mi
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-data
              mountPath: /config
            - name: media-movies
              mountPath: /movies
            - name: qbt-downloads
              mountPath: /downloads
      volumes:
        - name: radarr-data
          nfs:
            server: datasphere
            path: /Root/Volumes/radarr
        - name: media-movies
          nfs:
            server: datasphere
            path: /Root/Media/Movies
        - name: qbt-downloads
          nfs:
            server: datasphere
            path: /Root/Volumes/qbt/downloads
