flux/apps/arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
