flux/apps/arr/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.home`)
      kind: Rule
      services:
        - name: radarr
          port: 80
    - match: Host(`radarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: radarr
          port: 80
